// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Albums 1`] = `
<div>
  <span
    class="undefined albums svelte-1kobtom"
  >
    <h3
      class="svelte-1kobtom"
    >
      5 albums
    </h3>
     
    <ul
      class="svelte-1kobtom"
    >
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./cover.jpg"
                class="h-full w-full rounded-sm svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Diamonds on the inside
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              by 
              <a
                class="underlined"
                href="#/artist/1"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
              , 
              <a
                class="underlined"
                href="#/artist/2"
                onclick="event.stopPropagation()"
              >
                The Innocent Criminals
              </a>
              
               
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Artists 1`] = `
<div>
  <span
    class="undefined artists svelte-1kobtom"
  >
    <h3
      class="svelte-1kobtom"
    >
      5 artists
    </h3>
     
    <ul
      class="svelte-1kobtom"
    >
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
         
        <span
          class="svelte-4r86n"
          role="article"
        >
          <div
            class="content svelte-4r86n"
          >
            <span
              class="artwork svelte-4r86n"
            >
              <img
                alt="./avatar.jpg"
                class="h-full w-full rounded-full svelte-1psk6yi"
                height="256"
                loading="lazy"
                src="./avatar.jpg"
                width="256"
              />
               
              
            </span>
             
            <p
              class="controls svelte-4r86n"
            >
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="play"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  play_arrow
                </i>
                 
                 
                 
              </button>
               
              <button
                class="primary iconOnly large svelte-1e4q28k"
                data-testid="enqueue"
              >
                <i
                  class="material-icons svelte-1e4q28k"
                >
                  playlist_add
                </i>
                 
                 
                 
              </button>
            </p>
          </div>
           
          <header
            class="svelte-4r86n"
          >
            <h3
              class="svelte-4r86n"
            >
              Foo Fighters
            </h3>
             
            <h4
              class="svelte-rw2hde"
              slot="details"
            >
              2 albums
            </h4>
          </header>
        </span>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Tracks 1`] = `
<div>
  <span
    class="undefined tracks svelte-1kobtom"
  >
    <h3
      class="svelte-1kobtom"
    >
      5 tracks
    </h3>
     
    <ul
      class="svelte-1kobtom"
    >
      <li
        class="svelte-1kobtom"
      >
        <div
          class="undefined root svelte-30dtyc"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-30dtyc"
          >
            <span
              class="title svelte-30dtyc"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-11prmkk"
          >
            <button
              class="iconOnly noBorder svelte-1e4q28k"
            >
              <i
                class="material-icons svelte-1e4q28k"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
        <div
          class="undefined root svelte-30dtyc"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-30dtyc"
          >
            <span
              class="title svelte-30dtyc"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-11prmkk"
          >
            <button
              class="iconOnly noBorder svelte-1e4q28k"
            >
              <i
                class="material-icons svelte-1e4q28k"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
        <div
          class="undefined root svelte-30dtyc"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-30dtyc"
          >
            <span
              class="title svelte-30dtyc"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-11prmkk"
          >
            <button
              class="iconOnly noBorder svelte-1e4q28k"
            >
              <i
                class="material-icons svelte-1e4q28k"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
        <div
          class="undefined root svelte-30dtyc"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-30dtyc"
          >
            <span
              class="title svelte-30dtyc"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-11prmkk"
          >
            <button
              class="iconOnly noBorder svelte-1e4q28k"
            >
              <i
                class="material-icons svelte-1e4q28k"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
      <li
        class="svelte-1kobtom"
      >
        <div
          class="undefined root svelte-30dtyc"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
              height="256"
              loading="lazy"
              src="./cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-30dtyc"
          >
            <span
              class="title svelte-30dtyc"
            >
              Mama got a girlfriend
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Ben Harper
              </a>
            </span>
          </div>
           
           
          <span
            aria-expanded="false"
            aria-haspopup="menu"
            class="wrapper svelte-11prmkk"
          >
            <button
              class="iconOnly noBorder svelte-1e4q28k"
            >
              <i
                class="material-icons svelte-1e4q28k"
              >
                more_vert
              </i>
               
               
              
               
            </button>
          </span>
           
          
        </div>
         
      </li>
    </ul>
     
    <iframe
      aria-hidden="true"
      src="about:blank"
      style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
  </span>
  
</div>
`;
